prevented display overflow

--- a/style.css
+++ b/style.css
@@ -28,6 +28,9 @@ body {
 }
 
 .display-screen {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
   border: 2px solid purple;
   border-radius: 5px;
   display: flex;
